--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "qewd-server",
-  "version": "2.36.0",
+  "version": "2.37.0",
   "description": "Dockerised QEWD Server",
   "author": "Rob Tweed <rtweed@mgateway.com>",
   "main": "qewd.js",
   "scripts": {
-    "start": "DEBUG=*ewd* NODE_ENV=test NODE_PATH=/opt/qewd/mapped node qewd.js"
+    "start": "NODE_PATH=/opt/qewd/mapped node qewd.js"
   },
   "dependencies": {
-    "qewd": "",
+    "debug": "^3.1.0",
+    "qewd": "killmenot/qewd#tests",
     "qewd-monitor": "",
-    "ewd-client": ""
+    "qewd-require-json": "^1.0.0",
+    "qewd-transform-json": "",
+    "ewd-client": "",
+    "request": ""
   }
 }
