--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Rob Tweed <rtweed@mgateway.com>",
   "main": "qewd.js",
   "scripts": {
-    "start": "NODE_PATH=/opt/qewd/mapped node qewd.js"
+    "start": "NODE_ENV=test TEST_ENV=integration NODE_PATH=/opt/qewd/mapped node qewd.js"
   },
   "dependencies": {
     "debug": "^3.1.0",
